added admin header,

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thesis-junya-karl",
+  "name": "thesis-junya-karl-lhenard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
